# ndd-strings-to-sqlist

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ndd-strings-to-sqlist.pro
.github/workflows/: build-dll.yml
libs/: README.md
src/: AdvancedDialog.cpp  AdvancedDialog.h  StringsToSqlListPlugin.cpp  StringsToSqlListPlugin.h  nddpluginapi.h  pluginGl.h  qttestclass.cpp  qttestclass.h
tests/: test_convert.py
